# dllmain-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/lifecycle-dll/: Cargo.toml
examples/lifecycle-dll/src/: lib.rs
examples/minimal-dll/: Cargo.toml
examples/minimal-dll/src/: lib.rs
src/: lib.rs
