[package]
name = "dllmain-rs"
version = "0.1.0"
authors = ["iNverse <me@inve.rs>"]
edition = "2024"
description = "A proc-macro attribute to generate DllMain for Windows DLLs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeon256/dllmain-rs"
homepage = "https://github.com/zeon256/dllmain-rs"
documentation = "https://docs.rs/dllmain-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
